--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Olivia Ros</title>
+    <title>Julian Álvarez</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
@@ -46,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de mi</a>
+              <a class="nav-link" href="#">Acerca de Julian</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Trabajos</a>
+              <a class="nav-link" href="#">Equipos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="#">Más</a>
             </li>
           </ul>
         </div>
@@ -63,72 +63,40 @@
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
           <h1 class="display-1 fw-bold my-5">
-            Comidas del fin <br />
-            del mundo
+            De Córdoba <br />
+            al mundo
           </h1>
           <p class="my-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
-            accusamus iusto quibusdam dignissimos labore sequi. Cupiditate
-            reiciendis eius dolore, illum adipisci harum voluptas iste mollitia
-            inventore provident labore voluptatum nemo.
+            Futbolista argentino que juega como delantero o mediapunta en el
+            Manchester City F. C. de la Premier League de Inglaterra. Es
+            internacional con la Selección de fútbol de Argentina desde 2021.
+            Surgió en Club Atlético Calchín, pero se formó y debutó
+            profesionalmente en C. A. River Plate.
           </p>
           <div class="mb-5 pb-5">
             <button class="btn btn-lg btn-outline-info text-light me-4">
-              Trabajos
+              Acerca de Julian
             </button>
-            <button class="btn btn-lg btn-info text-light">Contacto</button>
+            <button class="btn btn-lg btn-info text-light">Más</button>
           </div>
         </div>
       </div>
     </header>
 
     <section id="Acerca-de-mi" class="container text-center my-5">
-      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+      <h2 class="display-3 fw-bold my-4">Acerca de Julian</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        Futbolista argentino que juega como delantero o mediapunta en el
+        Manchester City F. C. de la Premier League de Inglaterra. Es
+        internacional con la Selección de fútbol de Argentina desde 2021. Surgió
+        en Club Atlético Calchín, pero se formó y debutó profesionalmente en C.
+        A. River Plate.
       </p>
-
-      <div class="row">
-        <div class="col-12 col-md-4">
-          <i class="fas fa-camera fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-        <div class="col-12 col-md-4">
-          <i class="fas fa-bullhorn fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Crítica culinaria</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-        <div class="col-12 col-md-4">
-          <i class="far fa-map fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
     </section>
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
-      <h2 class="display-4 fw-bold text-center text-light mb-3">
-        Mis trabajos
-      </h2>
+      <h2 class="display-4 fw-bold text-center text-light mb-3">Mis equipos</h2>
 
       <div class="row">
         <div class="col-12 col-sm-4 py-2">
@@ -138,13 +106,8 @@
               style="background-image: url(assets/img/card-1.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
-              </p>
+              <h5 class="card-title fw-bold">Argentina</h5>
+              <p class="card-text">Campeón del mundo.</p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
               </button>
@@ -158,13 +121,8 @@
               style="background-image: url(assets/img/card-2.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
-              </p>
+              <h5 class="card-title fw-bold">Manchester City</h5>
+              <p class="card-text">Campeón de premier.</p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
               </button>
@@ -178,13 +136,8 @@
               style="background-image: url(assets/img/card-3.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Salmones de Alaska</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
-              </p>
+              <h5 class="card-title fw-bold">River Plate</h5>
+              <p class="card-text">Campeón de libertadores.</p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
               </button>
@@ -198,10 +151,7 @@
       <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
       <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
+        Puedes contactarme si quieres tener tu pagina web.
       </p>
 
       <form>
@@ -230,7 +180,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+      <p class="mb-0">Julian Álvarez | 2024. Todos los derechos reservados.</p>
     </footer>
 
     <script
